--- a/auftritte/auftritte_2004_4/auftritte_2004_4.html
+++ b/auftritte/auftritte_2004_4/auftritte_2004_4.html
@@ -2,39 +2,39 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_4_1.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_2.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_3.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_4.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_1.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_2.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_3.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_4.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_4_5.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_6.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_7.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_5.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_6.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_7.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_4_8.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_9.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_10.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_11.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_8.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_9.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_10.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_11.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_4_12.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_13.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_14.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_12.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_13.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_14.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_4_15.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_16.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_4_17.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_15.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_16.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_4/auftritte_2004_4_17.jpg')" target="_self"><img alt="Buchen &ndash; Seitenbacher-Betriebsfeier" src="auftritte/auftritte_2004_4/auftritte_2004_4_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
