--- a/auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html
+++ b/auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html
@@ -2,58 +2,58 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_1.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_2.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_3.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_4.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_1.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_2.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_3.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_4.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_5.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_6.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_7.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_5.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_6.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_7.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_8.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_9.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_10.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_11.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_8.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_9.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_10.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_11.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_12.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_13.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_14.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_12.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_13.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_14.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_15.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_16.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_15.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_16.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_17.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_18.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_18_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_19.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_19_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_17.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_18.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_18_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_19.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_19_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_20.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_20_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_21.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_21_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_22.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_22_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_20.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_20_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_21.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_21_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_22.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_22_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_23.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_23_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-06-17_24.gif')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17_24_min.gif" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_23.jpg')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_23_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-06-17/auftritte_2005-06-17_24.gif')" target="_self"><img alt="Limbach &ndash; Bretthart-Festival" src="auftritte/auftritte_2005-06-17/auftritte_2005-06-17_24_min.gif" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
