--- a/auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html
+++ b/auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html
@@ -2,61 +2,61 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_1.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_2.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_3.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_4.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_1.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_2.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_3.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_4.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_5.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_6.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_7.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_5.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_6.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_7.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_8.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_9.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_10.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_11.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_8.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_9.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_10.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_11.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_12.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_13.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_14.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_12.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_13.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_14.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_15.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_16.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_15.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_16.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_17.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_18.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_18_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_19.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_19_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_17.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_17_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_18.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_18_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_19.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_19_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_20.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_20_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_21.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_21_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_22.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_22_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_23.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_23_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_20.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_20_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_21.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_21_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_22.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_22_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_23.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_23_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_24.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_24_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_25.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_25_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_26.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_26_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2005-07-20_27.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20_27_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_24.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_24_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_25.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_25_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_26.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_26_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-07-20/auftritte_2005-07-20_27.jpg')" target="_self"><img alt="M&uuml;nchen &ndash; Bayern 4 - KlassiXmiX-Party" src="auftritte/auftritte_2005-07-20/auftritte_2005-07-20_27_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
