--- a/auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html
+++ b/auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html
@@ -2,16 +2,16 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003-10-18_1.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-10-18_2.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-10-18_3.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-10-18_4.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-10-18/auftritte_2003-10-18_1.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18/auftritte_2003-10-18_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-10-18/auftritte_2003-10-18_2.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18/auftritte_2003-10-18_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-10-18/auftritte_2003-10-18_3.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18/auftritte_2003-10-18_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-10-18/auftritte_2003-10-18_4.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18/auftritte_2003-10-18_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003-10-18_5.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-10-18_6.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-10-18/auftritte_2003-10-18_5.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18/auftritte_2003-10-18_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-10-18/auftritte_2003-10-18_6.jpg')" target="_self"><img alt="H&ouml;pfingen &ndash; Rock against terror" src="auftritte/auftritte_2003-10-18/auftritte_2003-10-18_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
