--- a/auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html
+++ b/auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html
@@ -2,38 +2,38 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_1.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_2.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_3.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_4.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_1.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_2.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_3.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_4.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_5.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_6.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_7.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_5.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_6.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_7.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_8.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_9.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_10.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_11.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_8.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_9.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_10.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_11.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_12.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_13.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_14.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_12.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_12_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_13.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_13_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_14.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_14_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_15.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2003-12-27_16.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_15.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_15_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2003-12-27/auftritte_2003-12-27_16.jpg')" target="_self"><img alt="Horb &ndash; Rainbow" src="auftritte/auftritte_2003-12-27/auftritte_2003-12-27_16_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
