--- a/auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html
+++ b/auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html
@@ -2,15 +2,15 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004-05-30_1.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004-05-30_2.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004-05-30_3.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004-05-30/auftritte_2004-05-30_1.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30/auftritte_2004-05-30_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004-05-30/auftritte_2004-05-30_2.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30/auftritte_2004-05-30_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004-05-30/auftritte_2004-05-30_3.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30/auftritte_2004-05-30_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004-05-30_4.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004-05-30_5.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004-05-30/auftritte_2004-05-30_4.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30/auftritte_2004-05-30_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004-05-30/auftritte_2004-05-30_5.jpg')" target="_self"><img alt="Adelsheim &ndash; Open Air im Zirkuszelt" src="auftritte/auftritte_2004-05-30/auftritte_2004-05-30_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
