--- a/auftritte/auftritte_2004_3/auftritte_2004_3.html
+++ b/auftritte/auftritte_2004_3/auftritte_2004_3.html
@@ -2,25 +2,25 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_3_1.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_2.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_3.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_4.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_1.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_2.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_2_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_3.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_3_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_4.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_4_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_3_5.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_6.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_7.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_5.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_5_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_6.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_6_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_7.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_7_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2004_3_8.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_9.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_10.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
-				<a href="javascript:zoom800x600('auftritte_2004_3_11.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_8.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_8_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_9.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_9_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_10.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_10_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2004_3/auftritte_2004_3_11.jpg')" target="_self"><img alt="Buchen &ndash; Frankenlandhalle" src="auftritte/auftritte_2004_3/auftritte_2004_3_11_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 		</tr>
 	</table>
