--- a/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
+++ b/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
@@ -2,6 +2,6 @@
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<td width="500" class="inhalt1" align="center">
-				<a href="javascript:zoom800x600('auftritte_2005-03-08_1.jpg')" target="_self"><img alt="Buchen &ndash; Kulturabend" src="auftritte/auftritte_2005-03-08_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
+				<a href="javascript:zoom800x600('auftritte/auftritte_2005-03-08/auftritte_2005-03-08_1.jpg')" target="_self"><img alt="Buchen &ndash; Kulturabend" src="auftritte/auftritte_2005-03-08/auftritte_2005-03-08_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 	</table>
