--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="keindruck">
       <ul id="navigation">
-        <li><a class="ajax-link" href="auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">Auftritte</a></li>
+        <li><a class="ajax-link" href="auftritte/auftritte.html?menue=auftritte">Auftritte</a></li>
         <li><a class="ajax-link" href="discographie/discographie.html?menue=discographie">Discographie</a></li>
         <li>Biographie</li>
           <ul>
@@ -73,7 +73,7 @@
   <div id="content">
 	<p class="lyrics">Herzlich Willkommen auf der offiziellen Website von Dark Rain</p>
 	
-	<h2><a class="ajax-link" href="auftritte/bilder_mp3s_videos/bilder_mp3s_videos.html?menue=auftritte">Auftritte</a></h2>
+	<h2><a class="ajax-link" href="auftritte/auftritte.html?menue=auftritte">Auftritte</a></h2>
 	<p class="inhalt1">
 		Hier findest Du immer alle aktuellen Auftrittstermine.
 		Dann gibt es noch alle m&ouml;glichen Bilder, MP3s und Videos zu schon
